# clicsv

./: Cargo.toml  DATA.csv  LICENSE  README.md  test.csv  todo.txt
binary/: clicsv
src/: document.rs  editor.rs  main.rs  table.rs  terminal.rs
