[package]
name = "clicsv"
version = "0.1.7"
edition = "2018"
authors = ["Shaka <shaka.x@yale.edu>"]
license = "MIT"
description = "CommandLine Spreadsheet Editor"
readme = "README.md"
homepage = "https://github.com/sudo-shaka/clicsv"
repository = "https://github.com/sudo-shaka/clicsv"
keywords = ["cli","csv","spreadsheet","editor"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "4.0.3"
unicode-segmentation = "1"
unicode-width = "0.1.7"
